2008-07-30 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlRequest.c:
	[ 2024019 ] SFCB can't handle large error messages
	(patch by Bart Whitely)
	
2008-07-11 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* control.c:
	[ 2015639 ] SFCB SLP registration process crashes after 2nd reg
	(patch by Nick Bofferding)

2008-07-08 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

    * cimXmlGen.c
    Fixed [2001486] SFCB extrinsic method output parameter problems
        (patch from J. Bart Whitely)

2008-06-30 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c:
	Fixed [ 2002392 ] Memory leaks in sfcb 1.2.5-35f
	(found by Hari V.)

2008-06-27 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* control.c, httpAdapter.c, sfcBroker.c, sfcb.cfg.pre.in:
	Fixed [ 1978218 ] SFCB support for HTTP over a unix socket
	(patch by J. Bart Whitely)

2008-06-27 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

    * interopServerProvider.c 
    Fixed [ 1945374 ] CIM_ObjectManagerCommunicationMechanism.Version not set
        (2nd fix to set proper version)

2008-06-25 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* fileRepository.c:
	Fixed [ 2001879 ] sfcb string compares for qualifier name are case-sensitive

	* support.c:
	Fixed [ 1998030 ] SFCB core dumps during garbage collection
	(thanks to Nick Bofferding for helping to track this down)
	
2008-06-24 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* context.c:
	Fixed [ 1999175 ] CMAddContextEntry doesn't update entries, only adds

2008-06-16 Sean Swehla <smswehla@linux.vnet.ibm.com>

	* support.c:
	Fixed [ 1914077 ] MI function signatures missing CMPIStatus * parameter
	(Patch by Tim Potter)

2008-06-13 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* internalProvider.c:
	Fixed [ 1993385 ] sfcb restarts itself on startup

2008-06-13 Sean Swehla <smswehla@linux.vnet.ibm.com>

    * indCIMXMLExport.c
    Fixed [ 1934753 ] indCIMXMLExport.c fails to compile on gcc 4.3
