@@ -24,6 +24,7 @@ Bugs fixed:
 - 2002392 Memory leaks in sfcb 1.2.5-35f
 - 2015639 SFCB SLP registration process crashes after 2nd registration
 - 2024019 SFCB can't handle large error messages
+- 2041967 sfcb trace messages have hard-coded size max
 
 Changes in 1.3.1
 ================
